tweak: A better fix for carousel overflow issue

--- a/src/components/enitity/carousels/CourseCarousel.scss
+++ b/src/components/enitity/carousels/CourseCarousel.scss
@@ -1,1 +1,1 @@
-.slick-initialized { overflow: hidden; }
+
